--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -13,7 +13,8 @@
 // 3. Components
 @import 'components/badges';
 @import 'components/cards';
-// @import 'components/buttons'; // Created when needed
+@import 'components/ranking';
+
 
 // 4. Layout (PC)
 @import 'layout/pc/header';
