--- a/assets/styles/base/_common.scss
+++ b/assets/styles/base/_common.scss
@@ -47,7 +47,7 @@ body {
 }
 
 .icon-invert {
-    filter: invert(1);
+    // filter: invert(1);
     width: rem(20);
 }
 
@@ -69,4 +69,111 @@ body {
     width: 100%;
     padding: 0;
     margin: 0 auto;
+}
+
+// Floating Menu
+// Sticky Track
+.sticky-track {
+    position: absolute;
+    top: rem(616); // Adjust based on actual height of header + slider
+    bottom: 0;
+    left: 50%;
+    margin-left: rem(700); // 1360/2 + 20px gap
+    width: rem(120);
+    z-index: 100;
+}
+
+// Floating Menu
+.floating-menu {
+    position: sticky;
+    top: rem(10); // Sticky top offset
+    width: 100%;
+
+    background: $white;
+    border: 1px solid #222;
+    border-radius: rem(4);
+    text-align: center;
+    overflow: hidden;
+
+    .menu-cart-section {
+        padding: rem(20) 0 rem(0);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .btn-cart {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: rem(32);
+            height: rem(32);
+            margin-bottom: rem(15);
+
+            svg {
+                width: rem(32);
+                height: rem(32);
+            }
+        }
+
+        .divider {
+            width: 100%;
+            height: 1px;
+            background-color: #eee;
+            margin: 0;
+        }
+    }
+
+    .menu-content {
+        display: flex;
+        flex-direction: column;
+        padding: rem(10) rem(14);
+
+        .menu-item {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: rem(8) 0;
+            text-decoration: none;
+            color: $black;
+
+            .label {
+                font-family: $font-family-base;
+                font-size: rem(13);
+                font-weight: 500;
+                color: $black;
+                margin-bottom: 0;
+                letter-spacing: -0.5px;
+            }
+
+            .count {
+                font-family: $font-family-number;
+                font-size: rem(14);
+                font-weight: 700;
+                color: $system-info;
+            }
+        }
+    }
+
+    .btn-top {
+        width: 100%;
+        padding: rem(12) 0;
+        border: none;
+        border-top: 1px solid #eee;
+        background: $white;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: rem(4);
+
+        span {
+            font-size: rem(13); // Adjusted to match image
+            font-weight: 700;
+            color: $black;
+            margin-top: rem(-2);
+            font-family: $font-family-number;
+        }
+
+    }
 }
