--- a/assets/styles/layout/pc/_footer.scss
+++ b/assets/styles/layout/pc/_footer.scss
@@ -76,17 +76,10 @@
                 }
 
                 // Dividers
-                .divider {
-                    width: 1px;
-                    height: rem(10);
-                    background-color: #DDDDDD;
-                    display: inline-block;
-                }
-
                 .dot-divider {
                     width: rem(3);
                     height: rem(3);
-                    background-color: #DDDDDD;
+                    background-color: #E3E3E3;
                     border-radius: 50%;
                 }
             }
@@ -98,74 +91,70 @@
             }
         }
 
-        .contact-info-area {
+        // App Install Box
+        .app-install-box {
             display: flex;
-            gap: rem(40);
-            justify-content: space-between;
+            flex-direction: column;
+            align-items: flex-start; // Align left
+            gap: rem(8); // Gap between elements
 
-            // App Install Box
-            .app-install-box {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-                gap: rem(12);
-
-                .title {
-                    font-size: rem(15);
-                    font-weight: 700;
-                    color: $black;
-                }
-
-                .qr-box {
-                    width: rem(80);
-                    height: rem(80);
-                    border: 1px solid #EEEEEE;
-                    padding: rem(4);
-                    border-radius: rem(4);
-
-                    img {
-                        width: 100%;
-                        height: 100%;
-                    }
-                }
+            .app-logo {
+                height: rem(20);
             }
 
-            // Contact List
-            .cs-list {
+            .title {
+                font-size: rem(14);
+                font-weight: 500;
+                color: $black;
+            }
+
+            .qr-box {
+                width: rem(60);
+                height: rem(60);
+                margin-top: rem(4);
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+
+        // Contact List
+        .cs-list {
+            display: flex;
+            flex-direction: column;
+            gap: rem(12);
+
+            .cs-item {
                 display: flex;
-                flex-direction: column;
-                gap: rem(12);
+                align-items: center;
+                gap: rem(8);
 
-                .cs-item {
-                    display: flex;
-                    align-items: center;
-                    gap: rem(8);
+                img {
+                    width: rem(24);
+                    height: rem(24);
+                    opacity: 0.6; // Muted icons
+                }
 
-                    img {
-                        width: rem(24);
-                        height: rem(24);
-                        opacity: 0.6; // Muted icons
-                    }
+                .label {
+                    font-size: rem(14);
+                    font-weight: 600;
+                    color: #666;
+                }
 
-                    .label {
-                        font-size: rem(14);
-                        font-weight: 600;
-                        color: #666;
-                    }
+                .value {
+                    font-size: rem(14);
+                    color: #222;
+                    font-weight: 600;
+                }
 
-                    .value {
-                        font-size: rem(14);
-                        color: #222;
-                        font-weight: 600;
-                    }
-
-                    .value-lg {
-                        font-size: rem(24); // Increased to 24px to match image visually (it's big)
-                        font-weight: 800; // Extra bold number
-                        font-family: "Pretendard", sans-serif; // Ensure standard font, numbers look standard
-                        color: $black;
-                        letter-spacing: 0; // Reset spacing
-                    }
+                .value-lg {
+                    font-size: rem(24); // Increased to 24px to match image visually (it's big)
+                    font-weight: 800; // Extra bold number
+                    font-family: "Pretendard", sans-serif; // Ensure standard font, numbers look standard
+                    color: $black;
+                    letter-spacing: 0; // Reset spacing
                 }
             }
         }
