--- a/assets/styles/base/_common.scss
+++ b/assets/styles/base/_common.scss
@@ -90,7 +90,7 @@ body {
     width: 100%;
 
     background: $white;
-    border: 1px solid #222;
+    border: 1px solid $black;
     border-radius: rem(4);
     text-align: center;
     overflow: hidden;
@@ -118,7 +118,7 @@ body {
         .divider {
             width: 100%;
             height: 1px;
-            background-color: #eee;
+            background-color: $gray-100;
             margin: 0;
         }
     }
@@ -159,7 +159,7 @@ body {
         width: 100%;
         padding: rem(12) 0;
         border: none;
-        border-top: 1px solid #eee;
+        border-top: 1px solid $gray-100;
         background: $white;
         cursor: pointer;
         display: flex;
