--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -87,7 +87,7 @@ body {
   top: 0.625rem;
   width: 100%;
   background: #ffffff;
-  border: 1px solid #222;
+  border: 1px solid #222222;
   border-radius: 0.25rem;
   text-align: center;
   overflow: hidden;
@@ -113,7 +113,7 @@ body {
 .floating-menu .menu-cart-section .divider {
   width: 100%;
   height: 1px;
-  background-color: #eee;
+  background-color: #eeeeee;
   margin: 0;
 }
 .floating-menu .menu-content {
@@ -148,7 +148,7 @@ body {
   width: 100%;
   padding: 0.75rem 0;
   border: none;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #eeeeee;
   background: #ffffff;
   cursor: pointer;
   display: flex;
@@ -655,7 +655,7 @@ body {
   font-family: "Pretendard", sans-serif;
   font-weight: 600;
   font-size: 1rem;
-  color: #222;
+  color: #222222;
 }
 .pagination-control .page-info .divider {
   width: 1.5rem;
@@ -676,7 +676,7 @@ body {
   font-size: 1rem;
   color: #222;
   opacity: 0.3;
-  color: #999;
+  color: #999999;
 }
 
 #eclubMainSlider {
